--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNYlIALOvMGgbFYNq0tiqVa",
+      "authorship_tag": "ABX9TyPFNOFtgO3UiYT9PUBRu1/q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1285,7 +1285,7 @@
       "metadata": {
         "id": "g525Ow_2OCQZ"
       },
-      "execution_count": 185,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1304,7 +1304,7 @@
       "metadata": {
         "id": "82Vi3B5cQgQl"
       },
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1318,7 +1318,7 @@
       "metadata": {
         "id": "P-KDp_nORfx4"
       },
-      "execution_count": 187,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1500,7 +1500,7 @@
       "metadata": {
         "id": "s8sQwPHnM_3n"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1513,7 +1513,7 @@
       "metadata": {
         "id": "-xq8Uhm1NWxj"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1531,7 +1531,7 @@
         "id": "g7-eqYcROYMk",
         "outputId": "032efa28-fbff-4651-b42f-cbb450d02462"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1564,7 +1564,7 @@
       "metadata": {
         "id": "e62gjJrZOumT"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1598,7 +1598,7 @@
       "metadata": {
         "id": "XLKvMR15Skth"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1629,7 +1629,7 @@
         "id": "6S95nnIJV5zz",
         "outputId": "ecb577f8-7fcf-46e4-8d27-302f860f134b"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1666,7 +1666,7 @@
       "metadata": {
         "id": "mrxVQBNiad_0"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1693,7 +1693,7 @@
         "id": "9hEJZF06cizL",
         "outputId": "c96c2d97-eb1e-4656-a26f-fa70adac51fa"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1754,7 +1754,7 @@
       "metadata": {
         "id": "1rpJfonHl5YD"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1772,7 +1772,7 @@
       "cell_type": "code",
       "source": [
         "#Policy Model - THIS POLICY MODEL IS A MODEL WITH VALUE HEAD - VALUE IS A SCALAR VALUE FOR expected cumulative reward from a given state.\n",
-        "#MODEL LEARNS THE POLICY AND HOW GOOD THE POLICY IS AS WELL JOINTLY AT SAME TIME . THIS IS APPLICABLE IN CASE WHERE MODEL IS LEARNING BOTH POLICY BUT ALSO HOW\n",
+        "#MODEL LEARNS THE POLICY AND HOW GOOD THE POLICY IS AS WELL JOINTLY AT SAME TIME . THIS IS APPLICABLE IN CASE WHERE MODEL IS LEARNING BOTH POLICY BUT ALSO HOW..\n",
         "#GOOD THE STATE IS\n",
         "import torch\n",
         "import transformers\n",
@@ -1787,7 +1787,7 @@
       "metadata": {
         "id": "LwVqML7fnuHC"
       },
-      "execution_count": 189,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1799,7 +1799,7 @@
       "metadata": {
         "id": "hSVcutcboI0n"
       },
-      "execution_count": 190,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1817,7 +1817,7 @@
         "id": "SQPIi3cVoTyx",
         "outputId": "f0ea7205-165d-46ed-9a38-890cd66bdde9"
       },
-      "execution_count": 191,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1856,7 +1856,7 @@
         "id": "AlHylKLKogKY",
         "outputId": "9e0dd7ed-4b6a-4204-9f52-5b054e7978e6"
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1915,7 +1915,7 @@
         "id": "fEm8wz30qDne",
         "outputId": "5b4775a8-2d31-4d34-93cf-bd4620e4091e"
       },
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1959,7 +1959,7 @@
         "id": "PpryVdVgt72J",
         "outputId": "e47b2c71-b753-4ba2-e0a1-e646fd896731"
       },
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1985,7 +1985,7 @@
       "metadata": {
         "id": "zIfQ_g7GyooR"
       },
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2000,7 +2000,7 @@
       "metadata": {
         "id": "GUhwcFanuf1W"
       },
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": []
     },
     {
