--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPFNOFtgO3UiYT9PUBRu1/q",
+      "authorship_tag": "ABX9TyNrbUYq7nd9TRhNJM2x+j4t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,7 +210,7 @@
         "tokenizer = AutoTokenizer.from_pretrained(\"bigcode/tiny_starcoder_py\")\n",
         "model  = AutoModelForCausalLM.from_pretrained(\"bigcode/tiny_starcoder_py\")\n",
         "tokenizer.pad_token = tokenizer.eos_token\n",
-        "tokenizer.padding_side = \"right\"\n",
+        "tokenizer.padding_side = \"right\" #padding as we want all sequences that go into LLM be of same size\n",
         "model.resize_token_embeddings(len(tokenizer))\n",
         "tokenizer.pad_token_id = tokenizer.eos_token_id\n",
         "model.config.end_token_id = model.config.eos_token_id\n",
@@ -719,6 +719,120 @@
       ],
       "metadata": {
         "id": "sMrxOSFJvq2A"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#GRPO TRAINING FOR RLHF\n",
+        "#CREDIT - https://www.youtube.com/watch?v=yGkJj_4bjpE"
+      ],
+      "metadata": {
+        "id": "Rcf6W7du-2wy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install accelerate  utils"
+      ],
+      "metadata": {
+        "id": "aDlYXUuBFpKd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import random\n",
+        "from accelerate import Accelerator\n",
+        "from utils import*\n",
+        "import grpo_utils\n",
+        "\n",
+        "model_name = \"models/sft_SmolLM-135M-Instruct\"\n",
+        "batch_size = 2 #sample two questions from the dataloader at any time\n",
+        "n_rollouts = 3\n",
+        "buffer_size = 6\n",
+        "max_new_tokens = 100\n",
+        "\n",
+        "#load essentials\n",
+        "llm = load_model(model_name)\n",
+        "for param in llm.parameters():\n",
+        "  param.requires_grad = False\n",
+        "tokenizer = load_tokenizer(model_name)\n",
+        "dataloader = get_dataloader(\"syllogism\",tokenizer)\n",
+        "optimizer = torch.optim.AdamW(llm.parameters(),lr=1e-5)\n",
+        "\n",
+        "#Intialize accelerator\n",
+        "accelerator = Accelerator()\n",
+        "llm, optimizer, dataloader = accelerator.prepare(llm,optimizer,dataloader,tokenizer)"
+      ],
+      "metadata": {
+        "id": "pQ-raS3Z-_sT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "batch = next(iter(dataloader))\n",
+        "batch.keys()"
+      ],
+      "metadata": {
+        "id": "wmamls_QLSB7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_ids = batch[\"inputs\"][\"input_ids\"]\n",
+        "attention_mask = batch[\"inputs\"][\"attention_mask\"]\n",
+        "validator = batch[\"validator\"]\n",
+        "\n",
+        "with torch.nograd(): # no gradient calculation\n",
+        "  full_responses = llm.generate(\n",
+        "      input_ids = input_ids,\n",
+        "      attention_mask = attention_mask,\n",
+        "      max_new_tokens = max_new_tokens, #100 only 100 tokens to be generated\n",
+        "      do_sample = True,\n",
+        "      top_p = 0.95, #probability of token\n",
+        "      num_return_sequences = n_rollouts,\n",
+        "      temperature=1,\n",
+        "      eos_token_id = tokenizer.eos_token_id,\n",
+        "      )\n",
+        "  assistant_responses = full_responses[:,input_size:]\n",
+        "  #logits from llm\n",
+        "  log_probs = grpo_utils.calculate_logits(llm,full_responses,attention_mask)\n",
+        "  #convert tokens into strings/text\n",
+        "  decoded_responses = tokenizer.batch_decode(assistant_responses,skip_special_tokens = True)\n",
+        "\n",
+        "  #model_responses = [batch_size*n_rollouts, max_new_tokens]\n",
+        "  #calculate rewards from the LLM response\n",
+        "  rewards = grpo_utils.calculate_rewards(decoded_responses, np.repeat(validator,n_rollouts))\n",
+        "\n",
+        "  #calculate the advantage\n",
+        "  rewards = np.reshape(rewards,(batch_size,n_rollouts))\n",
+        "  advantages = (rewards - np.mean(rewards,axis=1,keepdims=True)) / np.std(rewards,axis=1,keepdims=True) +1e-8\n",
+        "  #axis in numpy means:\n",
+        "  #0 in 1D array - apply the function/formula to all elements\n",
+        "  #0 in 2D array - apply the function/formula to row\n",
+        "  #0 in 3D array - apply the function/formula to all 2D array - depth of array\n",
+        "\n",
+        "  #1 in 2D array - apply the function/formula to column\n",
+        "  #1 in 3D array - apply the function / formula to row\n",
+        "  #2 in 3D array - apply the function /formula to column\n"
+      ],
+      "metadata": {
+        "id": "PQjg7xlxOhdk"
       },
       "execution_count": null,
       "outputs": []
