--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrbUYq7nd9TRhNJM2x+j4t",
+      "authorship_tag": "ABX9TyM84gtuffU4CEvjxMiPP3iB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -797,6 +797,41 @@
         "input_ids = batch[\"inputs\"][\"input_ids\"]\n",
         "attention_mask = batch[\"inputs\"][\"attention_mask\"]\n",
         "validator = batch[\"validator\"]\n",
+        "input_size = input_ids.shape[1]\n",
+        "FORMAT_REWARD_WEIGHT = 0.1\n",
+        "CORRECTNESS_REWARD_WEIGHT = 0.9\n",
+        "\n",
+        "#function to calculate reward\n",
+        "def calculate_format_reward(response):\n",
+        "    if (\n",
+        "        \"<answer>\" not in response and\n",
+        "         \"</answer>\" not in response and\n",
+        "         \"<think>\" not in response and\n",
+        "         \"</think>\" not in response\n",
+        "    ):\n",
+        "      return -1\n",
+        "    format_reward = 0\n",
+        "    if \"<think>\" in response:\n",
+        "      format_reward += 0.15\n",
+        "    if \"</think>\" in response:\n",
+        "      format_reward += 0.15\n",
+        "    if \"<answer>\" in response and \"</answer>\" in response:\n",
+        "      return format_reward +0.7\n",
+        "    else:\n",
+        "      return format_reward\n",
+        "\n",
+        "def calculate_rewards(batch_responses,validation_objects):\n",
+        "    format_rewards = np.array(\n",
+        "        [calculate_format_reward(response) for response in batch_responses]\n",
+        "    )\n",
+        "    #calculate if answer is correct\n",
+        "    correctness_rewards = np.array(\n",
+        "        calculate_correctness_reward(extract_answer(response),val_obj)\n",
+        "        for val_obj , response in zip(validation_objects,batch_responses)\n",
+        "    )\n",
+        "    #calculate final rewards\n",
+        "    rewards = format_rewards + correctness_rewards\n",
+        "    return rewards\n",
         "\n",
         "with torch.nograd(): # no gradient calculation\n",
         "  full_responses = llm.generate(\n",
@@ -809,8 +844,11 @@
         "      temperature=1,\n",
         "      eos_token_id = tokenizer.eos_token_id,\n",
         "      )\n",
+        "  #get just the assitant response and hence below line of code\n",
         "  assistant_responses = full_responses[:,input_size:]\n",
-        "  #logits from llm\n",
+        "  #raw logits from llm\n",
+        "  logits = llm(input_ids = full_responses,attention_mask = attention_mask).logits\n",
+        "  #get log probability of those logits by putting into a Softmax\n",
         "  log_probs = grpo_utils.calculate_logits(llm,full_responses,attention_mask)\n",
         "  #convert tokens into strings/text\n",
         "  decoded_responses = tokenizer.batch_decode(assistant_responses,skip_special_tokens = True)\n",
@@ -818,6 +856,9 @@
         "  #model_responses = [batch_size*n_rollouts, max_new_tokens]\n",
         "  #calculate rewards from the LLM response\n",
         "  rewards = grpo_utils.calculate_rewards(decoded_responses, np.repeat(validator,n_rollouts))\n",
+        "  #how is reward calculated .... reward is calculated by analyzing the assitant response contains certain tags or not like <THINK> </THINK> etc...\n",
+        "  #we asked the LLM for these tags .... so if these tags are present in the LLM response , accordingly reward is calculated and if LLM doesn't respond with tags\n",
+        "  #accordingly reward is calculated and LLM is trained using GRPO\n",
         "\n",
         "  #calculate the advantage\n",
         "  rewards = np.reshape(rewards,(batch_size,n_rollouts))\n",
@@ -829,10 +870,21 @@
         "\n",
         "  #1 in 2D array - apply the function/formula to column\n",
         "  #1 in 3D array - apply the function / formula to row\n",
-        "  #2 in 3D array - apply the function /formula to column\n"
+        "  #2 in 3D array - apply the function /formula to column\n",
+        "\n",
+        ""
       ],
       "metadata": {
         "id": "PQjg7xlxOhdk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "C3hVvpLPb5Ag"
       },
       "execution_count": null,
       "outputs": []
