--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/jZUDFQU72TCeH5p/7etZ",
+      "authorship_tag": "ABX9TyPnzjvpQErtZcEWUXYBGmNH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -902,12 +902,36 @@
       "cell_type": "code",
       "source": [
         "#calculate GRPO Loss Function\n",
-        "def calculate_grpo_loss(log_probs,old_log_probs,advantages,response_mask):\n"
+        "def calculate_grpo_loss(\n",
+        "    log_probs,\n",
+        "    old_log_probs,\n",
+        "    advantages,\n",
+        "    full_response_mask,\n",
+        "    loss_implementation = \"grpo\",\n",
+        "    clip_epsilon_low=0.2,\n",
+        "    clip_epsilon_high = 0.3\n",
+        "    ):\n",
+        "    MAX_TOKENS = 500\n",
+        "    importance_sampling_ratio = torch.exp(log_probs - old_log_probs)\n",
+        "    unclipped = advantages*importance_sampling_ratio\n",
+        "    clipped = advantages*torch.clamp(importance_sampling_ratio,1-clip_epsilon_low,1+clip_epsilon_high)\n",
+        "    loss = torch.min(unclipped,clipped)\n",
+        "    loss = loss*full_response_mask\n",
+        "    if loss_implementation == \"grpo\":\n",
+        "      response_mask_sum = full_response_mask.sum(dim=1).clamp(min=1.0)\n",
+        "      return (loss.sum(dim=1)/response_mask_sum).mean()\n",
+        "    elif loss_implementation == \"dr_grpo\":\n",
+        "      return loss.sum()/MAX_TOKENS #MAX_TOKENS = 500\n",
+        "    elif loss_implementation == \"bnpo\":\n",
+        "      return loss.sum()/full_response_mask.sum().clamp(min=1.0)\n",
+        "    else:\n",
+        "      raise ValueError(f\"Unknown loss implementation: {loss_implementation}\")\n",
+        "\n"
       ],
       "metadata": {
         "id": "FLGO5U0-oQS7"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
