--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPnzjvpQErtZcEWUXYBGmNH",
+      "authorship_tag": "ABX9TyPCivjTLphUGxvyOjp9cszZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -727,7 +727,10 @@
       "cell_type": "code",
       "source": [
         "#GRPO TRAINING FOR RLHF\n",
-        "#CREDIT - https://www.youtube.com/watch?v=yGkJj_4bjpE"
+        "#CREDIT - https://www.youtube.com/watch?v=yGkJj_4bjpE\n",
+        "#IN RL CHECKPOINT THE MODEL MORE - CHECKPOINT TO SAVE MODEL WEIGHTS ELSE RL TRAINING OSCILLATES THE MODEL\n",
+        "#SLMS ARE GOOD IF THEY ARE SFT TRAINED WITH RIGHT DATA\n",
+        "#ADD WHITE SPACES TO ANSWERS - THIS IMPROVES THE OUTCOME FROM  MODELS"
       ],
       "metadata": {
         "id": "Rcf6W7du-2wy"
@@ -931,7 +934,7 @@
       "metadata": {
         "id": "FLGO5U0-oQS7"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
