--- a/Fine_Tuning_Code_LLM.ipynb
+++ b/Fine_Tuning_Code_LLM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEuCeWF7x/z1CMDcdFWBnW",
+      "authorship_tag": "ABX9TyOd3OMCHucKy2CFe0LSuOG7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,14 +35,17 @@
       "outputs": [],
       "source": [
         "#fine tuning - Instruct Fine Tuning Code LLM  - SFT\n",
-        "#CREDIT - >https://milvus.io/ai-quick-reference/what-is-the-learning-rate-schedule-used-during-finetuning - learning rate for larger models can be range between 1e-5 to 5e-5..\n",
+        "#https://milvus.io/ai-quick-reference/what-is-the-learning-rate-schedule-used-during-finetuning - learning rate for larger models can be range between 1e-5 to 5e-5..\n",
         "#.. this will help the model to not distrub too much of pre-trained weights\n",
         "#warm up steps are typically 10% of overall training steps however warm up steps can be more for bigger models\n",
         "#idea is that model should not get stuck in local minima\n",
         "#optimizer like AdamW can be used and annealing rate can be cosine etc .... and move to 0\n",
         "#FINE TUNING CODE CREDIT - https://www.youtube.com/watch?v=CUJexhbvBqM and BIGCODER https://github.com/bigcode-project/starcoder/blob/main/finetune/finetune.py\n",
-        "#CREDIT - >https://github.com/pacman100/LLM-Workshop/blob/main/chat_assistant/dpo/utils.py\n",
-        "#CREDIT - >https://huggingface.co/blog/personal-copilot\n"
+        "#CREDIT - > https://huggingface.co/blog/personal-copilot\n",
+        "#CREDIT ->https://github.com/pacman100/LLM-Workshop/blob/main/chat_assistant/dpo/utils.py\n",
+        "\n",
+        "#THERE IS CODE ALSO FOR FILL IN MIDDLE(FIM) .... WHICH IS MUST FOR PRE-TRAINING AND ALSO FOR FINE TUNING OF AN LLM\n",
+        "#CREDIT - > https://medium.com/@rajabmondal97/pretraining-extending-pretraining-of-autoregressive-model-using-the-fill-in-the-middle-objective-cc04c8f01d77\n"
       ]
     },
     {
@@ -379,6 +382,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "FILL IN MIDDLE TRAINING CODE FOR LLM"
+      ],
+      "metadata": {
+        "id": "aCJT6fJLEdK7"
+      }
     }
   ]
 }
