--- a/Fine_Tuning_Code_LLM.ipynb
+++ b/Fine_Tuning_Code_LLM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOd3OMCHucKy2CFe0LSuOG7",
+      "authorship_tag": "ABX9TyPeYrrjMNONj73QvEsPk019",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,8 @@
         "#CREDIT ->https://github.com/pacman100/LLM-Workshop/blob/main/chat_assistant/dpo/utils.py\n",
         "\n",
         "#THERE IS CODE ALSO FOR FILL IN MIDDLE(FIM) .... WHICH IS MUST FOR PRE-TRAINING AND ALSO FOR FINE TUNING OF AN LLM\n",
-        "#CREDIT - > https://medium.com/@rajabmondal97/pretraining-extending-pretraining-of-autoregressive-model-using-the-fill-in-the-middle-objective-cc04c8f01d77\n"
+        "#CREDIT - > FIM - PRE-TRAINING CODE - https://medium.com/@rajabmondal97/pretraining-extending-pretraining-of-autoregressive-model-using-the-fill-in-the-middle-objective-cc04c8f01d77 - SUPER ARTICLE\n",
+        "#CREDIT -> FIM FINE TUNING CODE - >https://blog.gopenai.com/fine-tuning-language-models-with-fill-in-the-middle-a-comprehensive-guide-58a022b8f8df\n"
       ]
     },
     {
@@ -386,11 +387,197 @@
     {
       "cell_type": "markdown",
       "source": [
-        "FILL IN MIDDLE TRAINING CODE FOR LLM"
+        "FILL IN MIDDLE FINE TUNING TRAINING CODE FOR LLM"
       ],
       "metadata": {
         "id": "aCJT6fJLEdK7"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#FIM - PSM ->PRE + SUF + MIDDLE + EOT\n",
+        "#Original: \"Hello world from Python\"\n",
+        "#FIM - >Transformed: <PRE>Hello<SUF>from Python<MID>world<EOT>\n",
+        "\n",
+        "#FIM - SPM ->(Suffix-Prefix-Middle)\n",
+        "#Original: \"Hello world from Python\"\n",
+        "#Transformed: <SUF>from Python<PRE>Hello<MID>world<EOT>\n",
+        "\n",
+        "#Joint training of the model on PSM + SPM helps better code generation\n",
+        "#FIM models use bi-directional context unlike AR models which use left to right context"
+      ],
+      "metadata": {
+        "id": "TJogFPu8MGr3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install unsloth"
+      ],
+      "metadata": {
+        "id": "YJGbGuMHQ9YF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def create_training_mix(texts, fim_rate = 0.7):\n",
+        "  \"\"\" Create mix training data with specified FIM rate\"\"\"\n",
+        "  mixed_data = []\n",
+        "  for text in texts:\n",
+        "    if random.random() < fim_rate:\n",
+        "      #apply FIM transformation\n",
+        "      mixed_data.append(make_fim_mix(text, mode=\"joint\"))\n",
+        "    else:\n",
+        "      #keep standard AR format\n",
+        "      mixed_data.append(tokenize_standard(text))\n",
+        "  return mixed_data\n"
+      ],
+      "metadata": {
+        "id": "ddAkkanxMuou"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#FIM transformation function\n",
+        "def char_level_split(text):\n",
+        "  \"\"\" Character level splitting for robustness against subtoken boundaries\"\"\"\n",
+        "  if len(text) <3:\n",
+        "    return text ,\"\",\"\"\n",
+        "  i = random.randint(0,len(text)-2)\n",
+        "  j = random.randint(i+1,len(text)-1)\n",
+        "  return text[:i],text[i:j],text[j:]\n",
+        "\n",
+        "def make_fim_mix(text,mode = \"joint\"):\n",
+        "  \"\"\" Convert test to FIM format with special tokens \"\"\"\n",
+        "  prefix , middle , suffix = char_level_split(text)\n",
+        "  #tokenize components\n",
+        "  prefix = tokenizer.encode(prefix , add_special_tokens = False)\n",
+        "  middle = tokenizer.encode(middle , add_special_tokens = False)\n",
+        "  suffix = tokenizer.encode(suffix , add_special_tokens = False)\n",
+        "\n",
+        "  #get special token IDs\n",
+        "  PRE = tokenizer.convert_tokens_to_ids(\"<PRE>\")\n",
+        "  MID = tokenizer.convert_tokens_to_ids(\"<MID>\")\n",
+        "  SUF = tokenizer.convert_tokens_to_ids(\"<SUF>\")\n",
+        "  EOT = tokenizer.convert_tokens_to_ids(\"<EOT>\")\n",
+        "\n",
+        "  #Random format selection for joint training\n",
+        "  if mode == \"joint\":\n",
+        "    mode = \"PSM\"  if random.random() < 0.5 else \"SPM\"\n",
+        "\n",
+        "  # Format according to chosen mode\n",
+        "  if mode == \"PSM\":\n",
+        "    return [PRE] + prefix + [SUF] + suffix +  [MID] + middle + [EOT]\n",
+        "  elif mode == \"SPM\":\n",
+        "    return [SUF] + suffix + [PRE] + prefix + [MID] + middle + [EOT]\n",
+        "  else:\n",
+        "    raise ValueError(f\"Unknown mode {mode}\")"
+      ],
+      "metadata": {
+        "id": "9BYynjZjNu3Q"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from unsloth import FastLanguageModel\n",
+        "from transformers import AutoTokenizer\n",
+        "import random\n",
+        "\n",
+        "base_model = \"facebook/opt-350m\"\n",
+        "tokenizer = AutoTokenizer.from_pretrained(base_model)\n",
+        "model = FastLanguageModel.from_pretrained(base_model , load_in_4bit = True ,use_cache = False)\n",
+        "\n",
+        "#Add FIM special tokens\n",
+        "special_tokens = [\"<PRE>\",\"<SUF>\",\"<EOT>\",\"<MID>\"]\n",
+        "tokenizer.add_special_tokens({\"additional_special_tokens\":special_tokens})\n",
+        "model.resize_token_embeddings(len(tokenizer))"
+      ],
+      "metadata": {
+        "id": "Zt66_6vKQ2d0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#DATASET PROCESSING AND TRAINING\n",
+        "from datasets import load_dataset\n",
+        "dataset = load_dataset(\"wikitest\",\"wikitext-2-raw-v1\")\n",
+        "\n",
+        "def process(batch):\n",
+        "  \"\"\" Apply FIM transformation to batch\"\"\"\n",
+        "  toks = []\n",
+        "  for txt in batch[\"text\"]:\n",
+        "    if len(txt.strip()) ==0:\n",
+        "      continue\n",
+        "    toks.append(make_fim_mix(txt))\n",
+        "  return {\"input_ids\":toks}\n",
+        "\n",
+        "#tranform datasets\n",
+        "train_ds = dataset[\"train\"].map(process, batched = True, remove_columns = [\"text\"])\n",
+        "eval_ds = dataset[\"test\"].map(process, batched = True, remove_columns = [\"text\"])\n",
+        "\n",
+        "#Training Configuration\n",
+        "from trl import SFTTrainer\n",
+        "from transformers import TrainingArguments\n",
+        "\n",
+        "training_args = TrainingArguments(\n",
+        "    output_dir = \"/content/model\",\n",
+        "    per_device_train_batch_size = 4,\n",
+        "    gradient_accumlation_steps = 4,\n",
+        "    learning_rate = 2e-4,\n",
+        "    num_train_epochs =1,\n",
+        "    logging_steps = 10,\n",
+        "    save_steps = 100,\n",
+        "    save_total_limit = 2\n",
+        ")\n",
+        "trainer = SFTTrainer(\n",
+        "    model = model,\n",
+        "    tokenizer = tokenizer,\n",
+        "    train_dataset = train_ds,\n",
+        "    eval_dataset = eval_ds,\n",
+        "    args = training_args,\n",
+        "    dataset_text_field = \"input_ids\",\n",
+        "    max_seq_length = tokenizer.model_max_length\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "8A6IcTqmSdsA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PRE-TRAINING FIM CODE"
+      ],
+      "metadata": {
+        "id": "lWrnSrQaWQGa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "j-YCBIRyWdXy"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
