--- a/Fine_Tuning_Code_LLM.ipynb
+++ b/Fine_Tuning_Code_LLM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPeYrrjMNONj73QvEsPk019",
+      "authorship_tag": "ABX9TyN9ejx+vpB1lVoEJelcYK1p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -442,7 +442,7 @@
       "metadata": {
         "id": "ddAkkanxMuou"
       },
-      "execution_count": 4,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -486,7 +486,7 @@
       "metadata": {
         "id": "9BYynjZjNu3Q"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -572,11 +572,142 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "!pip install transformers\n",
+        "!pip install accelerate\n",
+        "!pip install datasets"
+      ],
+      "metadata": {
+        "id": "4o1c2i8vW6k2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from datasets import Dataset , DatasetDict\n",
+        "from torch.utils.data import DataLoader\n",
+        "import pandas as pd\n",
+        "import random\n",
+        "import torch\n",
+        "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+        "from transformers import Trainer , TrainingArguments, DataCollatorForLanguageModeling\n"
+      ],
       "metadata": {
         "id": "j-YCBIRyWdXy"
       },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "checkpoint = \"bigcode/starcoderbase-1b\"\n",
+        "tokenizer = AutoTokenizer.from_pretrained(checkpoint)\n",
+        "model = AutoModelForCausalLM.from_pretrained(checkpoint)\n",
+        "tokenizer.pad_token = tokenizer.eos_token"
+      ],
+      "metadata": {
+        "id": "1YebNQAoXcFR"
+      },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prefix_token = \"<fim_prefix>\"\n",
+        "suffix_token = \"<fim_suffix>\"\n",
+        "middle_token = \"<fim_middle>\"\n",
+        "eos_token = \"<|eot|>\"\n",
+        "\n",
+        "context_length = 512\n",
+        "chunk_length = context_length\n",
+        "max_len = context_length\n",
+        "\n",
+        "ds_train = load_dataset(\"huggingface-course/codeparrot-ds-train\", split=\"train\")\n",
+        "ds_valid = load_dataset(\"huggingface-course/codeparrot-ds-valid\", split=\"validation\")\n",
+        "raw_datasets = DatasetDict(\n",
+        "    {\n",
+        "        \"train\": ds_train.shuffle().select(range(50000)),\n",
+        "        \"valid\": ds_valid.shuffle().select(range(500))\n",
+        "    }\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "RXYUJWWcYIJ7"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#chunking function for FIM - THIS IS KEY FUNCTION\n",
+        "def chunk_documents(doc_list,chunk_length):\n",
+        "  joined_documents = eos_token.join(doc_list)\n",
+        "  chunk_list = []\n",
+        "  for i in range(0,len(joined_documents),chunk_length):\n",
+        "    chunk_list.append(joined_documents[i:i+chunk_length])\n",
+        "  return chunk_list\n",
+        "def chunk_dataset(raw_datasets,chunk_length):\n",
+        "  train_data = [d[\"content\"] for d in raw_datasets[\"train\"]]\n",
+        "  valid_data = [d[\"content\"] for d in raw_datasets[\"valid\"]]\n",
+        "\n",
+        "  train_data = chunk_documents(train_data,chunk_length)\n",
+        "  valid_data = chunk_documents(valid_data,chunk_length)\n",
+        "\n",
+        "  train_data = [{\"content_chunk\":ch} for ch in train_data]\n",
+        "  valid_data = [{\"content_chunk\":ch} for ch in valid_data]\n",
+        "\n",
+        "  chunk_train_ds = Dataset.from_pandas(pd.DataFrame(train_data))\n",
+        "  chunk_valid_ds = Dataset.from_pandas(pd.DataFrame(valid_data))\n",
+        "\n",
+        "  chunk_datasets = DatasetDict(\n",
+        "      {\n",
+        "          \"train\":chunk_train_ds,\n",
+        "          \"valid\":chunk_valid_ds\n",
+        "      }\n",
+        "  )\n",
+        "  return chunk_datasets\n",
+        "chunk_ds = chunk_dataset(raw_datasets,chunk_length)"
+      ],
+      "metadata": {
+        "id": "KE70PQ-_ZUyJ"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Build FIM Dataset\n",
+        "def split_document(doc, fim_rate = 0.5):\n",
+        "  if random.random() < fim_rate:\n",
+        "      #apply FIM transformation\n",
+        "      length = len(doc)\n",
+        "      prefix_len = random.randint(0,length)\n",
+        "      suffix_len = random.randint(0,length-prefix_len)\n",
+        "      middle_len = length - prefix_len - suffix_len\n",
+        "\n",
+        "      prefix = doc[:prefix_len]\n",
+        "      middle = doc[prefix_len:prefix_len+middle_len]\n",
+        "      suffix = doc[prefix_len + middle_len:]\n",
+        "\n",
+        "      return prefix , middle , suffix\n",
+        "  else:\n",
+        "      return doc, None , None\n",
+        "\n",
+        "def format_psm(prefix,middle,suffix):\n",
+        "    return f\"{prefix_token}{prefix}{middle_token}{middle}{suffix_token}{suffix}{eos_token}\"\n",
+        "def format_spm(prefix,middle,suffix):\n",
+        "    return f\"{suffix_token}{suffix}{prefix_token}{prefix}{middle_token}{middle}{eos_token}\""
+      ],
+      "metadata": {
+        "id": "bPXhwUECcLc2"
+      },
+      "execution_count": 20,
       "outputs": []
     }
   ]
