--- a/Fine_Tuning_Code_LLM.ipynb
+++ b/Fine_Tuning_Code_LLM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9ejx+vpB1lVoEJelcYK1p",
+      "authorship_tag": "ABX9TyPXOwDci2xo/10QROZVnFsM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -442,7 +442,7 @@
       "metadata": {
         "id": "ddAkkanxMuou"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -597,7 +597,7 @@
       "metadata": {
         "id": "j-YCBIRyWdXy"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -638,7 +638,7 @@
       "metadata": {
         "id": "RXYUJWWcYIJ7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -651,6 +651,7 @@
         "  for i in range(0,len(joined_documents),chunk_length):\n",
         "    chunk_list.append(joined_documents[i:i+chunk_length])\n",
         "  return chunk_list\n",
+        "\n",
         "def chunk_dataset(raw_datasets,chunk_length):\n",
         "  train_data = [d[\"content\"] for d in raw_datasets[\"train\"]]\n",
         "  valid_data = [d[\"content\"] for d in raw_datasets[\"valid\"]]\n",
@@ -676,7 +677,7 @@
       "metadata": {
         "id": "KE70PQ-_ZUyJ"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -699,15 +700,71 @@
         "  else:\n",
         "      return doc, None , None\n",
         "\n",
-        "def format_psm(prefix,middle,suffix):\n",
+        "def format_psm(prefix,middle,suffix,tokenizer):\n",
         "    return f\"{prefix_token}{prefix}{middle_token}{middle}{suffix_token}{suffix}{eos_token}\"\n",
-        "def format_spm(prefix,middle,suffix):\n",
-        "    return f\"{suffix_token}{suffix}{prefix_token}{prefix}{middle_token}{middle}{eos_token}\""
+        "def format_spm(prefix,middle,suffix,tokenizer):\n",
+        "    return f\"{suffix_token}{suffix}{prefix_token}{prefix}{middle_token}{middle}{eos_token}\"\n"
       ],
       "metadata": {
         "id": "bPXhwUECcLc2"
       },
-      "execution_count": 20,
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#apply FIM\n",
+        "def apply_fim(chunk_list , p_psm = 0.5):\n",
+        "  transformed_docs = []\n",
+        "  for chunk in chunk_list:\n",
+        "    prefix , middle , suffix = split_document(chunk)\n",
+        "    if middle is not None:\n",
+        "      if random.random() < p_psm:\n",
+        "        transformed_docs.append(format_psm(prefix,middle,suffix, tokenizer))\n",
+        "      else:\n",
+        "        transformed_docs.append(format_spm(prefix,middle,suffix,tokenizer))\n",
+        "  return transformed_docs\n",
+        "def join_tranformed_chunk_docs(transformed_chunk_docs):\n",
+        "  merged_docs = transformed_chunk_docs[0]\n",
+        "  if len(transformed_chunk_docs) == 1:\n",
+        "    return merged_docs\n",
+        "  for i in range(2,len(transformed_chunk_docs)):\n",
+        "    merged_docs += eos_token + transformed_chunk_docs[i]\n",
+        "  return merged_docs"
+      ],
+      "metadata": {
+        "id": "9Yw_0t0xeydC"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def apply_context_level_fim(chunk):\n",
+        "  chunk_documents = chunk.split(eos_token)\n",
+        "  transformed_chunk_docs = apply_fim(chunk_documents)\n",
+        "  join_tranformed_chunk_docs = join_tranformed_chunk_docs(transformed_chunk_docs)\n",
+        "  formatted_example = tokenizer(join_tranformed_chunk_docs,truncation = False, padding =\"max_length\",max_length = max_len)\n",
+        "  return {\"input_ids\":torch.LongTensor(formatted_example[\"input_ids\"]).squeeze(0),\"attention_mask\":torch.LongTensor(formatted_example[\"attention_mask\"]).squeeze(0)}\n",
+        "\n",
+        "class FimDataset(Dataser):\n",
+        "  def __init__(self,data):\n",
+        "    self.data = data\n",
+        "  def __len__(self):\n",
+        "    return len(self.data)\n",
+        "  def __getitem__(self,idx):\n",
+        "    chunk = self.data[idx][\"content_chunk\"]\n",
+        "    chunk = str(chunk)\n",
+        "    return apply_context_level_fim(chunk)\n",
+        "train_dataset = FimDataset(chunk_ds[\"train\"])\n",
+        "valid_dataset = FimDataset(chunk_ds[\"valid\"])"
+      ],
+      "metadata": {
+        "id": "dLhyWSP5hKRu"
+      },
+      "execution_count": 29,
       "outputs": []
     }
   ]
